# MLOps-Challenge

./: Dockerfile  README.md  estructura_proyecto.txt  inference_logs.txt  pyproject.toml  training_logs.txt
app/builders/: build_models.py
app/builders/model_builders/: keras_builder.py  sklearn_builder.py  xgboost_builder.py
app/config/: config.py
app/data/: dataset_items.csv  inference.csv  predictions.csv  test.csv  train.csv  validation.csv
app/modeling/: evaluation.py  tuning.py
app/preprocessing/: text.py
app/steps/: run_step.py
app/steps/inference/: inference.py
app/steps/training/: training.py
app/utilities/: utils.py
notebooks/: inference.ipynb  modeling.ipynb  split_data.ipynb
